--- a/src/components/blog-header.astro
+++ b/src/components/blog-header.astro
@@ -37,7 +37,7 @@ const { category } = Astro.params;
               })
             )}
           >
-            All posts
+            すべて
           </a>
         </li>
         {categories.map((item) => (
