--- a/src/components/layout/base-head.astro
+++ b/src/components/layout/base-head.astro
@@ -4,17 +4,17 @@ import "@/styles/globals.css";
 import { ViewTransitions } from "astro:transitions";
 
 interface Props {
-  title: string;
-  description?: string;
-  image?: string;
+	title: string;
+	description?: string;
+	image?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const {
-  title,
-  description = siteConfig.description,
-  image = "/og.jpg",
+	title,
+	description = siteConfig.description,
+	image = "https://sikumi.jp/thumbnail.png",
 } = Astro.props;
 ---
 
@@ -27,18 +27,39 @@ const {
 <!-- Font preloads -->
 <link
   rel="preload"
-  href="/fonts/calsans-semibold.woff2"
+  href="/fonts/LINESeedJP_OTF_Bd.woff2"
   as="font"
   type="font/woff2"
   crossorigin
+/>
+<link
+  rel="preload"
+  href="/fonts/LINESeedJP_OTF_Eb.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+rel="preload"
+href="/fonts/LINESeedJP_OTF_Rg.woff2"
+as="font"
+type="font/woff2"
+crossorigin
+/>
+<link
+rel="preload"
+href="/fonts/LINESeedJP_OTF_Th.woff2"
+as="font"
+type="font/woff2"
+crossorigin
 />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{title ? `${title} | Astronomy` : "Astronomy"}</title>
-<meta name="title" content={title ? `${title} | Astronomy` : "Astronomy"} />
+<title>{title ? `${title} | ${siteConfig.name}` : siteConfig.name}</title>
+<meta name="title" content={title ? `${title} | ${siteConfig.name}` : siteConfig.name} />
 <meta name="description" content={description} />
 
 <!-- Open Graph / Facebook -->
@@ -55,8 +76,12 @@ const {
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
+<!-- <link rel="stylesheet" href="https://unpkg.com/mermaid/dist/mermaid.min.css">
+<script src="https://unpkg.com/mermaid/dist/mermaid.min.js" is:inline></script>
+<script is:inline>mermaid.initialize({startOnLoad:true});</script> -->
+
 <!-- Dark mode with prevent flickering flash between navigations -->
-<script is:inline>
+<script is:inline type="text/partytown">
 const setDarkMode = () => {
   const theme = (() => {
     if (
