--- a/src/components/layout/header.astro
+++ b/src/components/layout/header.astro
@@ -19,7 +19,7 @@ const { className } = Astro.props;
   <div class="relative container flex items-center justify-between w-full">
     <div class="flex items-center gap-6 md:gap-8 lg:gap-10">
       <a href="/" class="hidden items-center space-x-2 md:flex">
-        <Icon name="stars-outline" class="size-8" />
+        <Icon name="tabler:tax" class="size-8" />
         <span class="hidden font-bold sm:inline-block">
           {siteConfig.name}
         </span>
@@ -37,7 +37,7 @@ const { className } = Astro.props;
       class="absolute top-1/2 left-1/2 -translate-x-4 -translate-y-4 md:hidden"
     >
       <a href="/" aria-label="Astronomy homepage">
-        <Icon name="stars-outline" class="size-8" />
+        <Icon name="tabler:tax" class="size-8" />
       </a>
     </div>
 
